--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,16 @@ spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
 #configuration for kafka producer
 spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#externalize common values to fetch from properties file
+spring.kafka.topic.name=demoTopic
+spring.kafka.topic-json.name=demoTopic_json
